# TUGAS-BESAR-CAKRU-URO-17-NATANAEL-I-MANURUNG-19624283-

./: README.md
install/: local_setup.sh  setup.sh
install/basepkg/lib/basepkg/: lidar_publisher.py  my_node
install/basepkg/share/ament_index/resource_index/package_run_dependencies/: basepkg
install/basepkg/share/ament_index/resource_index/parent_prefix_path/: basepkg
install/basepkg/share/basepkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/basepkg/share/basepkg/cmake/: basepkgConfig-version.cmake  basepkgConfig.cmake
install/basepkg/share/basepkg/environment/: ament_prefix_path.dsv  path.dsv
install/basepkg/share/basepkg/launch/: display.launch.py  gazebo.launch.py
install/basepkg/share/basepkg/rviz/: rviz_config.rviz
install/basepkg/share/basepkg/src/: my_node.cpp
install/basepkg/share/basepkg/urdf/: robot.urdf
log/: latest_build
src/basepkg/: CMakeLists.txt
src/basepkg/launch/: gazebo.launch.py
src/basepkg/src/: lidar_publisher.py  my_node.cpp
src/basepkg/urdf/: robot.urdf
